// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto2";
package arrow.dataset.jni;

option java_package = "org.apache.arrow.dataset.jni";
option java_outer_classname = "RecordBatchProtos";
option optimize_for = SPEED;

message FieldProto {
  required int64 length = 1;
  required int64 nullCount = 2;
}

message JavaManagedBufferProto {
  required uint64 memoryAddress = 1;
  required int64 size = 2;
  required int64 capacity = 3;
  required uint64 cleanerObjectRef = 4;
  required uint64 cleanerMethodRef = 5;
}

message UnsafeJavaManagedRecordBatchProto {
  required int64 numRows = 1;
  repeated FieldProto fields = 2;
  repeated JavaManagedBufferProto buffers = 3;
}

message NativeManagedBufferProto {
  required uint64 memoryAddress = 1;
  required int64 size = 2;
  required int64 capacity = 3;
  required uint64 nativeBufferId = 4;
}

message UnsafeNativeManagedRecordBatchProto {
  required int64 numRows = 1;
  repeated FieldProto fields = 2;
  repeated NativeManagedBufferProto buffers = 3;
}
